# tenderness

./: .coveragerc.toml  .gitignore  .pre-commit-config.yaml  LICENSE  NOTICE  README.md  mypy.ini  pyproject.toml  pytest.toml  ruff.toml  tox.toml  zensical.toml
.github/workflows/: docs.yml
docs/: api-reference.md  index.md  overview.md
docs/api_reference/: api_reference.md
docs/basics/core-concepts/: text-bboxes.md
docs/components/: bbox_visualizer.html
docs/examples/: document-pipeline-examples.md
docs/setup/: development.md  install.md
docs/stylesheets/: extra.css
docs/usage/: bboxes.md  examples.md
scripts/: debug_env.py  download_test_fonts.py  playground_document_pipeline.py  run_coverage.sh
src/tenderness/: __init__.py  py.typed
src/tenderness/bounding_boxes/: __init__.py  bounding_boxes_schema.py  draw_bounding_boxes.py  draw_text_bboxes.py  text_bounding_box_extractor.py
src/tenderness/cairo_backend/: __init__.py  background_selector.py  cairo_enum_coerce.py  color_patterns.py  font_options_interface.py  pixel_formats.py  surface_config_manager.py  surface_configuration.py  surface_creator.py  text_color_selector.py
src/tenderness/cairo_backend/matrix/: context_transformer_pipeline.py  matrix_transformer.py  matrix_transforms.py
src/tenderness/colors/: __init__.py  color_selector.py
src/tenderness/core/: __init__.py  base_interface.py  cache_paths.py  color_models.py  geometry.py  image_formats.py  sentinel.py  supported_platforms.py
src/tenderness/draw/: __init__.py
src/tenderness/draw/minimal_draw/: draw_borders.py  draw_helpers.py  draw_shapes.py  minimal_draw.py
src/tenderness/font_files/: __init__.py  downloader.py  downloader_spec.py  integrity.py  manifest.py
src/tenderness/font_files/font_sources/: honk.py  noto.py
src/tenderness/font_setup/: __init__.py  font_setup.py  fontconfig_managers.py  fontconfig_templates.py
src/tenderness/image_backend/: __init__.py  image_backends.py  image_placer.py  surface_array_converter.py  surface_writer.py
src/tenderness/layout_engines/: __init__.py  position_helpers.py
src/tenderness/layout_engines/minimal_flexbox/: flex_container_properties.py  flex_item_properties.py  minimal_flexbox.py  minimal_flexbox_templates.py
src/tenderness/pango_backend/: __init__.py  font_description_interface.py  layout_context_interface.py  layout_interface.py  layout_interface_geometry.py  pango_enum_coerce.py
src/tenderness/pipelines/: __init__.py  renderer_configurator.py
src/tenderness/pipelines/document/: __init__.py  bbox_helper.py  draw_block_bboxes.py  image_block_helpers.py  pipeline.py  pipeline_schema.py  setup_helpers.py  table_block_helpers.py  text_block_helpers.py
src/tenderness/pipelines/standard/: render_blocks.py  render_pipeline.py  render_pipeline_models.py
tests/: conftest.py  test_basic.py
tests/_test_utils/: class_test.py  dataclass_test.py  enum_test.py  eternal_contracts_helpers.py  fonts_test.py  paths_test.py  render_helpers.py  str_enum_test.py
tests/e2e/: conftest.py  e2e_constants.py
tests/e2e/pipelines/document/: _document_render_pipeline.py  conftest.py  test_latin_text.py  test_only_textblocks.py  test_table.py
tests/e2e/via_standard/: _standard_render_pipeline.py  conftest.py
tests/e2e/via_standard/multi_layout/: test_only_textblocks.py
tests/e2e/via_standard/table/: test_table.py
tests/e2e/via_standard/text/: test_latin_text.py
tests/tenderness/: conftest.py  test_public_api.py
tests/tenderness/bounding_boxes/test_bounding_boxes_schema/: conftest.py  test_char_bbox.py  test_cluster_bbox.py  test_layout_bbox.py  test_layout_bbox_collection.py  test_line_bbox.py  test_quadrilateral.py  test_run_bbox.py
tests/tenderness/bounding_boxes/test_text_bounding_box_extractor/: _test_cases.py  test_byte_mapping.py  test_char_bboxes_extraction.py  test_cluster_bboxes_extraction.py  test_layout_bboxes_extraction.py  test_line_bboxes_extraction.py  test_run_bboxes_extraction.py  test_text_bboxes.py
tests/tenderness/cairo_backend/: test_cairo_enum_coerce.py  test_font_options_interface.py  test_pixel_formats.py
tests/tenderness/cairo_backend/matrix/: conftest.py  test_context_transformer_pipeline.py  test_matrix_transformer.py
tests/tenderness/cairo_backend/test_cases/: pixel_formats.py
tests/tenderness/colors/: conftest.py  test_color_selector.py
tests/tenderness/core/: test_base_interface.py  test_color_models.py  test_geometry.py  test_supported_platforms.py
tests/tenderness/font_setup/: test_font_setup.py
tests/tenderness/pango_backend/: test_font_description_interface.py  test_layout_context_interface.py  test_pango_enum_coerce.py
tests/tenderness/pipelines/: __init__.py
tests/tenderness_eternal_contracts/bounding_boxes/: test_bounding_boxes_schema.py  test_draw_text_bboxes.py  test_text_bounding_box_extractor.py
tests/tenderness_eternal_contracts/cairo_backend/: test_background_selector.py  test_cairo_enum_coerce.py  test_font_options_interface.py  test_pixel_formats.py  test_surface_config_manager.py  test_surface_configuration.py  test_surface_creator.py  test_text_color_selector.py
tests/tenderness_eternal_contracts/colors/: test_color_selector.py
tests/tenderness_eternal_contracts/core/: test_color_models.py  test_geometry.py  test_image_formats.py  test_supported_platforms.py
tests/tenderness_eternal_contracts/font_files/: test_downloader.py  test_downloader_spec.py  test_integrity.py  test_manifest.py
tests/tenderness_eternal_contracts/font_setup/: test_font_setup.py  test_fontconfig_managers.py
tests/tenderness_eternal_contracts/image_backend/: test_array_converter.py  test_image_backends.py  test_image_placer.py  test_surface_writer.py
tests/tenderness_eternal_contracts/layout_engines/: test_position_helpers.py
tests/tenderness_eternal_contracts/pango_backend/: test_font_description_interface.py  test_layout_context_interface.py  test_layout_interface.py  test_layout_interface_geometry.py  test_pango_enum_coerce.py
tests/tenderness_eternal_contracts/pipelines/: test_renderer_configurator.py
(+42 files in other folders)
